--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Car Rental App to EC2
 
 on:
   push:
-    branches: [ "main" ]   # Trigger on push to main branch
+    branches: [ "master" ]   # Trigger on push to main branch
 
 jobs:
   build-and-deploy:
