--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Car Rental App to EC2
 
 on:
   push:
-    branches: [ "master" ]   # Trigger on push to main branch
+    branches: [ "master" ]   # Trigger on push to master branch
 
 jobs:
   build-and-deploy:
@@ -31,7 +31,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "target/car-rental-1.0.0.jar"
+          source: "target/car-rental-2.0.0.jar"
           target: "/home/${{ secrets.EC2_USER }}/app/"
 
       # Step 5: Restart app on EC2
@@ -45,4 +45,5 @@ jobs:
             echo "Stopping existing app..."
             pkill -f "java -jar" || true
             echo "Starting new app..."
-            nohup java -jar /home/${{ secrets.EC2_USER }}/app/car-rental-1.0.0.jar > app.log 2>&1 &
+            nohup java -jar /home/${{ secrets.EC2_USER }}/app/car-rental-2.0.0.jar > app.log 2>&1 &
+
