final commit to prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
-spring.application.name=car-rental
-server.port=8080
+# Server configuration
+server.port=9090
+
+# Spring Boot Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# Logging
+logging.level.root=INFO
+logging.file.name=/home/ubuntu/app/app.log
+
+# Disable database auto-configuration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+# Optional: other production-ready settings
+server.servlet.context-path=/
+spring.main.banner-mode=off
+
