--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 # Server configuration
 server.port=9090
+server.address=0.0.0.0
 
-# Spring Boot Actuator
+# Spring Boot Actuator configuration
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.info.enabled=true
 
 # Logging
-logging.level.root=INFO
-logging.file.name=/home/ubuntu/app/app.log
+logging.level.org.springframework=INFO
+logging.level.com.example.carrental=DEBUG
+logging.file.name=app.log
 
-# Disable database auto-configuration
+# Disable datasource auto-configuration (no DB)
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
-# Optional: other production-ready settings
-server.servlet.context-path=/
-spring.main.banner-mode=off
 
