--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,16 @@
 server.port=9090
 server.address=0.0.0.0
 
-# Spring Boot Actuator configuration
-management.endpoints.web.exposure.include=*
+# Thymeleaf
+spring.thymeleaf.cache=false
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info,metrics,env
 management.endpoint.health.show-details=always
-management.endpoint.info.enabled=true
 
-# Logging
-logging.level.org.springframework=INFO
-logging.level.com.example.carrental=DEBUG
-logging.file.name=app.log
-
-# Disable datasource auto-configuration (no DB)
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# No database
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=
 
